<resources>
    <string name="app_name">FreshTech</string>
    <string name="login_correo">Correo electrónico</string>
    <string name="login_contraseña">Contraseña</string>
    <string name="register_contraseña">Contraseña maestra</string>
    <string name="register_confirmar_contraseña">Confirmar contraseña maestra</string>
    <string name="button_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="button_registrarse">REGISTRARSE</string>
    <string name="button_crear_cuenta">CREAR CUENTA</string>
    <string name="edit_url">URL</string>
    <string name="edit_usuario">Nombre de usuario</string>
    <string name="edit_fecha_creacion">Fecha de creación</string>
    <string name="edit_fecha_expiracion">Fecha de expiración</string>
    <string name="button_edit_guardar">Guardar</string>
    <string name="menu_edit_product">Editar</string>
    <string name="menu_delete_product">Eliminar</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="spinner_sin_categoria">Categoría</string>
    <string name="nombre_categoria">Nombre de la categoría</string>

    <string name="menu_principal">Todos los elementos</string>
    <string name="menu_categorias">Categorías</string>
    <string name="menu_generador">Generar contraseña</string>
    <string name="constraseña_actual">Constraseña actual</string>
    <string name="nueva_contraseña">Nueva contraseña</string>
    <string name="confirmar_nueva_contraseña">Confirmar nueva contraseña</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="configuracion">Configuración</string>
    <string name="contraseñas">Contraseñas</string>
    <string name="documentos">Documentos</string>
    <string name="imagenes">Imágenes</string>
</resources>